--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "vite": "^6.2.4"
     },
     "dependencies": {
+        "chart.js": "^4.4.9",
         "sweetalert2": "^11.19.1"
     }
 }
